1. More documentation in all files 2. First test after nearly a month of development 3. Optimization of the new features included in Forge versions higher than 1.13 4. More bugs than ever, since this is the first time I've made a major mod for this version